<resources>
    <string name="app_name">Yala Mall</string>
    <string name="internet_error">Internet Error</string>
    <string name="local">eng</string>
    <string name="unexpected_api_error">unexpected error</string>
    <string name="update">Update</string>
    <string name="Home">Home</string>
    <string name="searchMallsShops">ابحث في المولات و المحلات</string>
    <string name="filter">اضافة فلتر</string>
    <string name="browse">استعراض</string>
    <string name="all">غير محدد</string>
    <string name="select_cat">اختر النوع</string>
    <string name="addCart">اضافة للسلة</string>
    <string name="productAdded">تم اضافته للسلة</string>
    <string name="checkout">شراء</string>
    <string name="cart_permission">لا تستطيع الشراء من عدة مولات في طلب واحد</string>
    <string name="exit_app">في حال خروجك سيتم حذف المنتجات التي قمت بطلبها</string>
    <string name="filter_cancel">إلغاء الفلتر</string>
    <string name="login_failed">الكود غير صحيح</string>
    <string name="phone_number">رقم الهاتف</string>
    <string name="phoneEmpty">الرجاء ادخال رقم الهاتف</string>
    <string name="phoneInvalidMessage">رقم هاتف خاطئ</string>
    <string name="text_last_step">تم اتمام التسجيل</string>
    <string name="address_added">تمت اضافة الموقع بنجاح</string>
    <string name="cancel">الغاء</string>
    <string name="Add">اضافة</string>
    <string name="addressEmpty">الرجاء تعبئة حقل العنوان</string>
    <string name="locationEmpty">يرجى اختيار الموقع</string>
    <string name="cityEmpty">الرجاء اختيار المدينة</string>
    <string name="address_not_selected">يرجى اختيار عنوان من قائمة العناوين</string>
    <string name="log">التسجيل</string>
    <string name="login">تسجيل الدخول</string>
    <string name="social">التواصل الاجتماعي</string>
    <string name="facebook">فيس بوك</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="my_addresses">عناويني</string>
    <string name="my_orders">طلباتي</string>
    <string name="sign_in">تسجيل الدخول</string>
    <string name="price">السعر</string>
    <string name="del_cost">سعر التوصيل</string>
    <string name="start_date">تاريخ الطلب</string>
    <string name="end_date">تاريخ التوصيل</string>
    <string name="status">الحالة</string>

    <string name="listview_header_hint_normal"> </string>
    <string name="listview_header_hint_release"> </string>
    <string name="listview_loading"> </string>
    <string name="nomore_loading">لا يمكن تحميل المزيد من العناصر</string>
    <string name="refreshing">جاري التحديث</string>
    <string name="refresh_done"> </string>
    <string name="loading_done"> </string>
    <string name="listview_header_last_time">آخر تحديث：</string>
    <string name="banner_ad_unit_id">ca-app-pub-9346728385477859/4574617487</string>
    <string name="facebook_app_id">331864947725775</string>
    <string name="fb_login_protocol_scheme">fb2199453887038296</string>
    <string name="rating">التقييم</string>
    <string name="write_note">اكتب ملاحظاتك</string>
    <string name="rate_completed">تمت عملية التقييم</string>
    <string name="zero_rate">لا يمكن التقييم بتقييم صفري</string>
    <string name="rate_caneled">لم تتم عملية التقييم , تأكد من الانترنت و حاول مجددأ</string>
    <string name="favorite_caneled">لم تتم الاضافة للمفضلة</string>
    <string name="favorite_completed">تمت الاضافة للمفضلة</string>
    <string name="de_favorite_caneled">لم تتم الازالة من المفضلة</string>
    <string name="re_favorite_completed">تمت الازالة من المفضلة بنجاح</string>
    <string-array name="query_suggestions">
        <item>-</item>
    </string-array>
</resources>
