<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/app_bar_layout"
            android:id="@+id/app_bar_id" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:background="@color/colorPrimaryDark"
                android:weightSum="5"

                >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_weight="1">
                    <TextView
                        android:gravity="center"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:text="@string/price"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:textAlignment="center"
                        android:text="@string/del_cost"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:textAlignment="center"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:text="@string/start_date"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:textAlignment="center"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:text="@string/end_date"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:textAlignment="center"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:text="@string/status"/>

                </LinearLayout>

            </LinearLayout>




        <android.support.v7.widget.RecyclerView

            android:id="@+id/order_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</RelativeLayout>

